syntax = "proto3";
option csharp_namespace = "EventSourcing.Contracts";
package ES;

import "Empty.proto";

message Vehicle {
    string Vin = 1;
    string Make = 2;
    string Model = 3;
    string LocationCode = 4;
}

message Vehicles {
    repeated Vehicle Elements = 1;
}

message VehicleRequest {
    oneof Identifier {
        string Vin = 1;
    }
}

message LocationVehiclesRequest {
    string LocationCode = 1;
}

message VehicleList {
    repeated Vehicle Vehicles = 1;
}

service VehicleRead {
    rpc GetVehicle (VehicleRequest) returns (Vehicle) {
    }

    rpc GetVehicleUpdates (Empty) returns (stream Vehicle) {
    }

    rpc GetVehiclesAtLocation (LocationVehiclesRequest) returns (VehicleList) {
    }

    rpc GetVehicleUpdatesAtLocation (LocationVehiclesRequest) returns (stream Vehicle) {
    }
}

service VehicleWrite {
    rpc AddVehicle (Vehicle) returns (Vehicle) {
    }

    rpc AddVehicles (stream Vehicle) returns (stream Vehicle) {
    }
}

